<?xml version="1.0"?>
<package>
  <name>code_coverage</name>
  <version>0.5.5</version>
  <description>CMake configuration to run coverage</description>
  <author email="mike@vanadiumlabs.com">Michael Ferguson</author>
  <maintainer email="mike@vanadiumlabs.com">Michael Ferguson</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/mikeferguson/code_coverage</url>
  <url type="bugtracker">https://github.com/mikeferguson/code_coverage/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- TODO: rosdep for lcov/gcov/genhtml -->

</package>