<?xml version="1.0"?>
<package>
  <name>code_coverage</name>
  <version>0.3.0</version>
  <description>CMake configuration to run coverage</description>
  <author email="mike@vanadiumlabs.com">Michael Ferguson</author>
  <maintainer email="mike@vanadiumlabs.com">Michael Ferguson</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/mikeferguson/code_coverage</url>
  <url type="bugtracker">https://github.com/mikeferguson/code_coverage/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>lcov</build_depend>
  <build_depend>python-coverage</build_depend>
  <run_depend>lcov</run_depend>
  <run_depend>python-coverage</run_depend>

</package>